# claude-mcp-crm-reference

./: DESIGN_DOC.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/commands/: audit.md  dev.md  test.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  gitleaks.yml  pipe-dev.yml  pipe-prod.yml  scemantic.yml  upload-release-files.yml
apps/api/: Dockerfile  pyproject.toml
apps/email/: package.json
apps/mkdocs/: pyproject.toml
apps/nextjs/: package.json
docs/: architecture.d2  flow.d2
tooling/eslint-config/: package.json
